--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
   url_launcher: ^5.4.2
   firebase_core: ^0.4.0
   firebase_messaging: ^5.0.2
-  app_review: ^1.1.0+1
+#  app_review: ^1.1.0+1 // there was an error w this for codemagic, maybe try another
 #  flutter_local_notifications: ^1.2.1
   notification_permissions: ^0.4.4
   shared_preferences: ^0.5.6+2
