--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
 #  flutter_local_notifications: ^1.2.1
   notification_permissions: ^0.4.4
   shared_preferences: ^0.5.6+2
+  pull_to_refresh: ^1.5.8
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -37,6 +39,13 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.7.3"
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "/home/danny/Downloads/covid19.jpg"
+
 
 
 # For information on the generic Dart part of this file, see the
