about to build for ios

--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=/home/danny/Android/Sdk
-flutter.sdk=/home/danny/Installed/flutter
+sdk.dir=/Users/noel.george/Library/Android/sdk
+flutter.sdk=/Users/noel.george/flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=2
