--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -48,4 +48,5 @@
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
 </dict>
+<key>NSAppTransportSecurity</key> <dict> <key>NSAllowsArbitraryLoads</key> <true/> </dict>
 </plist>
